--- a/Search-In-Moshaf/wwwroot/css/site.css
+++ b/Search-In-Moshaf/wwwroot/css/site.css
@@ -1,26 +1,32 @@
-* {
-    font-family: 'Bricolage Grotesque', sans-serif;
-    font-family: 'Cairo', sans-serif;
+body {
+    background-image: url("../imgs/pexels.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+* {
+   font-family: "Amiri", serif;
+}
+
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
