--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿@{
     ViewData["Title"] = "إبحث في المصحف";
 }
-<div>
-    <h2 style="width:60%; margin-top:15%;margin-left:28%;">أدخل الكلمه أو الجمله التي تريد أن تبحث عنها في المصحف </h2>
-    <div class="text-center" style="width:60%; margin-top:5%;margin-left:20%;">
+
+<div class="search-container">
+    <h2>أدخل الكلمه أو الجمله التي تريد أن تبحث عنها في المصحف</h2>
+    <div class="search-bar">
         <form class="d-flex" asp-controller="Home" asp-action="Filter">
-            <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
-            <input name="searchString" type="text" class="form-control" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button><i class="bi bi-search"></i></button>
+            <input name="searchString" type="text" class="form-control" aria-label="Recipient's username" aria-describedby="button-addon2" placeholder="بحث...">
         </form>
     </div>
 </div>
